--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Птицы Казахстана: лучшие фотографии</title>
+    <meta name="description" content="Птицы Казахстана: лучшие фотографии от сообщества любителей птиц. Birds of Kazakhstan: best pictures." />
+    <meta name="keywords" content="птицы, Казахстан, фотографии, снимки, бёрдвотчинг, бёрдинг, birds, Kazakhstan, pictures, birding, birdwatching" />
+    <meta name="author" content="Сообщество Птицы Казахстана" />
+    <title>Птицы Казахстана: лучшие фото</title>
     <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-26XR7TKB59"></script>
       <script>
